--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
 }
 #calculator{
-    height: 500px;
+    height: 600px;
     width: 500px;
     border: 1px solid black;
 }
@@ -14,4 +14,21 @@ body {
     width: 100%;
     height: 20%;
     border: 1px solid black;
+}
+#buttonBody{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 5%;
+}
+.button{
+    flex: 1;
+    background-color: gray;
+    margin: 5%;
+    padding: 1.5em 1.5em 1.5em 1.5em;
+    border: 1px solid black;
+    color: white;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
