--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
     border: 1px solid black;
 }
 #screen{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 20%;
     border: 1px solid black;
@@ -19,7 +22,7 @@ body {
     display:flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 5%;
+    margin: 2.5% 5% 0% 5%;
 }
 .button{
     flex: 1;
