--- a/style.css
+++ b/style.css
@@ -4,34 +4,50 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background: url('desk.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #calculator{
     height: 600px;
     width: 500px;
     border: 1px solid black;
+    border-radius: 5%;
+    background-color: rgb(0, 0, 0);
 }
+
 #screen{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 20%;
-    border: 1px solid black;
+    width: 90%;
+    height: 12.5%;
+    border: 1px solid rgb(0, 0, 0);
+    font-size: larger;
+    background-color: rgb(168, 187, 168);
+    margin: 5% 5% 5% 5%;
+    border-radius: 10%;
 }
 #buttonBody{
+    height:75%;
     display:flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 2.5% 5% 0% 5%;
+    margin: 0% 5% 2.5% 5%;
+    border: 1px solid black;
+    background-color: rgb(95, 94, 93);
+    border-radius: 5%;
 }
 .button{
     flex: 1;
-    background-color: gray;
+    background-color: rgb(255, 249, 249);
     margin: 5%;
     padding: 1.5em 1.5em 1.5em 1.5em;
     border: 1px solid black;
-    color: white;
+    color: rgb(0, 0, 0);
     display:flex;
     align-items: center;
     justify-content: center;
+    border-radius: 25%;
 }
