--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+html{
+    height:100%;
+    
+}
 body {
-    width: 100%;
-    height: 100vh;
+    min-height: 100%;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
