--- a/style.css
+++ b/style.css
@@ -22,17 +22,27 @@ body {
 }
 
 #screen{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 90%;
     height: 12.5%;
     border: 1px solid rgb(0, 0, 0);
-    font-size: larger;
     background-color: rgb(168, 187, 168);
     margin: 5% 5% 5% 5%;
     border-radius: 10%;
 }
+#textScreen{
+    font-size:150%;
+}
+#history{
+    position: absolute;
+    top:12.5%;
+    right: 5%;
+    font-size: 85%;
+}
+
 #buttonBody{
     height:75%;
     display:flex;
